# multithreaded_ui_simulation

./: .gitignore  CMakeLists.txt  GENERATION_EXAMPLE.md  NODEID_ANSWERS.md  cleanup_emacs.sh  compile_commands.json
.cache/clangd/index/: ChangeBuffer.h.53F429C235141603.idx  FrontendNodes.h.901CEED6D42D918D.idx  Movie.h.528172E27FDA51A6.idx  RenderContext.cpp.CFD946417A990629.idx  RenderContext.h.B4FEF762960D3FB2.idx  TreeNode.h.12975907BDBB38D4.idx  main.cpp.C47BF9B5B1461516.idx  ui_ids.h.FF17A2E3E77E6F39.idx
src/: BackendContainerNode.h  BackendShapeNode.h  BackendShapeRectNode.h  BackendTextNode.h  ChangeBuffer.h  ChangeBuffer.h~  ContainerNode.h  DataAccessor.h  DataAccessor.h~  FrontendNodes.cpp  FrontendNodes.h  Movie.h  NodeData.cpp  NodeData.h  NodeIdAllocator.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RenderContext.cpp  RenderContext.cpp~  RenderContext.h  TextNode.h  TraceProfiler.cpp  TraceProfiler.h  TreeNode.h  main.cpp  ui_ids.h
test/: ChangeBufferTest.cpp  FrontendNodeTest.cpp  GenerationValidationTest.cpp  NodeIdAllocatorTest.cpp  NodeIdTest.cpp  RenderContextTest.cpp
